--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,11 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
+javadoc {
+    source = sourceSets.main.allJava
+    classpath = configurations.compile
+}
+
 jar {
     manifest {
         attributes 'Main-Class': 'de.codehat.levelbuilder.Controller'
