--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
     }
 }
 
-group 'de.codehat'
-version '1.0.0'
+group = 'de.codehat'
+version = '1.0.1'
 
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java'
