--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.assertj', name: 'assertj-swing-junit', version: '3.8.0'
     compile 'com.google.code.gson:gson:2.8.2'
 }
